<resources>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="dashboard">Dashboard</string>
    <string name="staff_list">Staff List</string>
    <string name="child_list">Child List</string>
    <string name="profile">My profile</string>
    <string name="logout">Logout</string>
    <string name="areas">Areas</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_address">Email Address*</string>
    <string name="password">Password*</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="login_failure">login failure</string>
    <string name="please_enter_username">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="login_successful">Logged In Successfully</string>
    <string name="login_denied">login denied not a valid user</string>
    <string name="logout_successful">Logged Out Successfully</string>
    <string name="downloading">Downloading…</string>
    <string name="username">Username</string>
    <string name="alert">Alert</string>
    <string name="version">Version</string>
    <string name="login">Log In</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="title_activity_child">ChildActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="count">count</string>
    <string name="children">Children</string>
    <string name="staff">Staff</string>

    <string name="sub_task_name">Sub task Name</string>
    <string name="assigned_child_list">Assigned Child List</string>
    <string name="delete_staff">Delete Staff</string>
    <string name="update_details">Update Details</string>
    <string name="mobile_no">Mobile No</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
