<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_40"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_lock"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@android:color/black"
            android:textSize="24sp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:maxLines="1"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="@dimen/large_text_size"
            tools:ignore="TextFields" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="@dimen/large_text_size"
            tools:ignore="Autofill" />


        <Button
            android:id="@+id/btnLogin"
            style="@style/CEVABtnTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/login_button" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:visibility="gone"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/login_button" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/downloading_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_circular"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="false"
        android:max="100"
        android:minWidth="200dp"
        android:minHeight="@dimen/margin_20"
        android:progress="1"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>
</LinearLayout>

