<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/child_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_round"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/background_round"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="70dp"
                        android:gravity="end"
                        android:padding="5dp"
                        android:text="@string/children"
                        android:textColor="@color/menu_text"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtChildCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:text="0"
                        android:textColor="@color/menu_text" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/child_gradient"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_accessibility_black_24dp"
                        app:tint="@android:color/white"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/staff_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_round"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/background_round"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="70dp"
                        android:gravity="end"
                        android:padding="5dp"
                        android:text="@string/staff"
                        android:textColor="@color/menu_text"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtStaffCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:text="0"
                        android:textColor="@color/menu_text" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/staff_gradient"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="TODO"
                        android:src="@drawable/ic_group_black_24dp"
                        app:tint="@android:color/white" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/area_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_round"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/background_round"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="70dp"
                        android:gravity="end"
                        android:padding="5dp"
                        android:text="@string/areas"
                        android:textColor="@color/menu_text"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtAreaCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:text="0"
                        android:textColor="@color/menu_text" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/areas_gradient"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_assignment_black_24dp"
                        app:tint="@android:color/white" />
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/report_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_round"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/background_round"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="70dp"
                        android:gravity="end"
                        android:padding="5dp"
                        android:text="Reports"
                        android:textColor="@color/menu_text"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtReportCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:text="0"
                        android:textColor="@color/menu_text" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/report_gradient"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_insert_chart_black_24dp"
                        app:tint="@android:color/white" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>